--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -17,7 +17,7 @@ $font-weight :700;
 $bg-colour-1:  #9679ff;
 $bg-colour-2:  #d499ea;
 $bg-colour-3:  #eea4b3;
-$light-dark-colour:  #2e2d36;
+$font-dark-colour:  #2e2d36;
 $lighter-dark-colour:  #858e98;
 $mediumpurple: mediumpurple;
 $deep-purple: #7c54c1;
