--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -56,7 +56,7 @@
     font-size: $medium-font-size;
     line-height: $medium-line-height;
     box-shadow: 0 14px 24px rgba(46, 45, 54, 0.25);
-    color: $light-dark-colour;
+    color: $font-dark-colour;
   }
 
   ::placeholder {
@@ -325,7 +325,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: $light-dark-colour;
+    background-color: $font-dark-colour;
     bottom: 0;
     top: 0;
     left: 0;
