feat: Refactor AddPropertyPage

--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -2,8 +2,8 @@
 
 // Site footer
 .footer {
-  padding-top: $section-spacing;
-  padding-bottom: $section-spacing;
+  padding-top: $medium-section-spacing;
+  padding-bottom: $medium-section-spacing;
   background-color: #2d2e35;
   position: relative;
   overflow: hidden;
